# vigilant-doodle

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  UI_DIAGNOSTIC.md
.cargo/: config.toml
.github/workflows/: ci.yml  release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
assets/: balance.json
assets/i18n/en/: main.ftl  menu.ftl  settings.ftl
assets/i18n/zh-Hans/: main.ftl  menu.ftl  settings.ftl
assets/localization/: en_US.json  zh_CN.json
assets/model/: enemy.glb  knife_sharp.glb  player.glb
crates/ai/: Cargo.toml
crates/ai/src/: behavior.rs  enemy_ai.rs  lib.rs
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs  loader.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/camera/: Cargo.toml
crates/camera/src/: isometric.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: balance.rs  crypto.rs  lib.rs  localization.rs  save.rs  state.rs
crates/game/: Cargo.toml
crates/game/src/: enemy_setup.rs  lib.rs  save.rs
crates/game/src/ai/: behavior.rs  detection.rs  mod.rs
crates/game/src/assets/: loader.rs
crates/game/src/audio/: mod.rs
crates/game/src/camera/: components.rs  isometric.rs  mod.rs
crates/game/src/core/: localization.rs  mod.rs  save.rs  state.rs
crates/game/src/gameplay/: enemy.rs  mod.rs  movement.rs  player.rs
crates/game/src/input/: actions.rs  cursor.rs  mod.rs
crates/game/src/ui/: components.rs  menu.rs  mod.rs  settings_menu.rs  simple_menu.rs  styles.rs
crates/game/src/world/: mod.rs  spawning.rs  terrain.rs
crates/gameplay/: Cargo.toml
crates/gameplay/src/: enemy.rs  lib.rs  movement.rs  player.rs
crates/input/: Cargo.toml
crates/input/src/: actions.rs  cursor.rs  lib.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: main.rs
crates/ui/: Cargo.toml
crates/ui/src/: components.rs  lib.rs  menu.rs  settings_menu.rs  simple_menu.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs  spawning.rs  terrain.rs
docs/: AI_SYSTEM.md  ARCHITECTURE_BEST_PRACTICE.md  ENCRYPTION_GUIDE.md  IMPLEMENTATION_GUIDE.md  README.md  WORKSPACE_ARCHITECTURE.md
mobile/: Cargo.toml
mobile/src/: lib.rs
scripts/: README.md  package-linux.sh  package-windows.ps1  quick-build.sh
src/: lib.rs  main.rs  menu.rs  player.rs
src/actions/: game_control.rs  mod.rs
src/camera/: mod.rs  player_camera.rs
src/enemies/: enemies.rs
src/player/: player.rs  weapon.rs
src/world/: mod.rs  world.rs
