# Vigilant Doodle - Workspace 配置

[workspace]
resolver = "2"
members = [
    "crates/launcher",
    "crates/game",
]

# Workspace 级别的依赖配置（所有成员共享）
[workspace.dependencies]
bevy = { version = "0.17.2", default-features = false }
bevy_kira_audio = { version = "0.24.0" }
bevy_asset_loader = { version = "0.24.0-rc.1" }
rand = { version = "0.9.2" }

# Workspace 级别的包配置
[workspace.package]
edition = "2024"
authors = ["loosqk <loosqk@gmail.com>"]
license = "MIT"
repository = "https://github.com/your-org/vigilant-doodle"

# 开发模式：第三方库优化，自身代码快速编译
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# 发布模式：完全优化
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true  # 移除调试符号，减小体积

# 分发模式（cargo dist）
[profile.dist]
inherits = "release"
lto = "thin"
