# Vigilant Doodle - Workspace 配置

[workspace]
resolver = "2"
members = [
    "crates/launcher",
    "crates/game",
]
default-members = ["crates/launcher"]

# Workspace 级别的依赖配置（所有成员共享）
[workspace.dependencies]
# 使用 Bevy 默认 features（包含完整的渲染、UI、音频等功能）
bevy = { version = "0.17.2" }
# bevy_kira_audio = { version = "0.24.0", features = ["ogg"] }  # 预留：未来添加音频时启用
bevy_asset_loader = { version = "0.24.0-rc.1" }
bevy_egui = { version = "0.38.0" }
bevy-inspector-egui = { version = "0.35.0" }
rand = { version = "0.9.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
dirs = { version = "5.0" }
bincode = { version = "1.3" }
crc32fast = { version = "1.4" }
aes-gcm = { version = "0.10" }

# Workspace 级别的包配置
[workspace.package]
edition = "2024"
authors = ["loosqk <loosqk@gmail.com>"]
license = "MIT"
repository = "https://github.com/your-org/vigilant-doodle"

# 开发模式：第三方库优化，自身代码快速编译
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# 发布模式：完全优化
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true  # 移除调试符号，减小体积

# 分发模式（cargo dist）
[profile.dist]
inherits = "release"
lto = "thin"
