# Vigilant Doodle - Workspace 配置

[workspace]
resolver = "2"
members = [
    "crates/launcher",
    "crates/game",
    "crates/core",
    "crates/assets",
    "crates/camera",
    "crates/world",
    "crates/input",
    "crates/gameplay",
    "crates/ai",
    "crates/ui",
    "crates/audio",
]
default-members = ["crates/launcher"]

# Workspace 级别的依赖配置（所有成员共享）
[workspace.dependencies]
# 使用 Bevy 默认 features（包含完整的渲染、UI、音频等功能）
bevy = { version = "0.17.2" }
# bevy_kira_audio = { version = "0.24.0", features = ["ogg"] }  # 预留：未来添加音频时启用
bevy_asset_loader = { version = "0.24.0-rc.1" }
bevy_egui = { version = "0.38.0" }
bevy-inspector-egui = { version = "0.35.0" }
rand = { version = "0.9.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
dirs = { version = "6.0.0" }
bincode = { version = "2.0.1" }
crc32fast = { version = "1.4" }
aes-gcm = { version = "0.10" }
mimalloc = { version = "0.1" }

# Workspace 级别的包配置
[workspace.package]
edition = "2024"
authors = ["loosqk <loosqk@gmail.com>"]
license = "MIT"
repository = "https://github.com/arxxyr/vigilant-doodle"

# 开发模式：第三方库优化，自身代码快速编译
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# 发布模式：完全优化（最终发布用，编译慢但性能最优）
[profile.release]
lto = true          # 完整 LTO：最优性能，编译时间 15-20 分钟
codegen-units = 1
opt-level = 3
strip = true        # 移除调试符号，减小体积

# 快速发布模式：用于日常开发测试（2-3 分钟编译）
[profile.release-fast]
inherits = "release"
lto = false         # 关闭 LTO，极速编译
codegen-units = 16  # 并行代码生成
opt-level = 2       # 降低优化级别
strip = false       # 保留符号，便于调试

# 分发模式（cargo dist）
[profile.dist]
inherits = "release"
lto = "thin"
