[package]
name = "vigilant-doodle-game"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
publish = false

# 库（支持动态链接）
[lib]
crate-type = ["rlib", "dylib"]  # 同时支持静态和动态链接

[dependencies]
# 使用 workspace 依赖
bevy = { workspace = true, features = [
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_state",
    "serialize",
    "reflect_auto_register",
    "png",
    "hdr",
    "zstd_rust",
    "ktx2",
    "file_watcher",
    "tonemapping_luts",
] }

bevy_kira_audio = { workspace = true }
bevy_asset_loader = { workspace = true }
rand = { workspace = true }

# 可选依赖（通过 feature 启用）
bevy-inspector-egui = { version = "0.34.0", optional = true }

[features]
# 开发模式特性
dev = ["bevy/dynamic_linking"]

# 调试工具（可选启用）
inspector = ["dep:bevy-inspector-egui"]
