[package]
name = "vigilant-doodle-game"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
publish = false

# 库（支持动态链接）
[lib]
crate-type = ["rlib", "dylib"]  # 同时支持静态和动态链接

[dependencies]
# 使用 workspace 依赖
bevy = { workspace = true }

# bevy_kira_audio = { workspace = true }  # 预留：未来添加音频时启用
bevy_asset_loader = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
bincode = { workspace = true }
crc32fast = { workspace = true }
aes-gcm = { workspace = true }

# 可选依赖（通过 feature 启用）
bevy-inspector-egui = { workspace = true, optional = true }

[features]
# 开发模式特性
dev = ["bevy/dynamic_linking"]

# 调试工具（可选启用）
inspector = ["dep:bevy-inspector-egui"]
