[package]
name = "vigilant-doodle-game"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
publish = false

# 库（支持动态链接）
[lib]
crate-type = ["rlib", "dylib"]  # 同时支持静态和动态链接

[dependencies]
# 使用 workspace 依赖
bevy = { workspace = true }

# 引入所有子 crates
vigilant-doodle-core = { path = "../core" }
vigilant-doodle-assets = { path = "../assets" }
vigilant-doodle-camera = { path = "../camera" }
vigilant-doodle-world = { path = "../world" }
vigilant-doodle-input = { path = "../input" }
vigilant-doodle-gameplay = { path = "../gameplay" }
vigilant-doodle-ai = { path = "../ai" }
vigilant-doodle-ui = { path = "../ui" }
vigilant-doodle-audio = { path = "../audio" }

# 用于存档系统和 bin 工具
dirs = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aes-gcm = { workspace = true }
crc32fast = { workspace = true }

# 可选依赖（通过 feature 启用）
bevy-inspector-egui = { workspace = true, optional = true }

[features]
# 开发模式特性
dev = ["bevy/dynamic_linking"]

# 调试工具（可选启用）
inspector = ["dep:bevy-inspector-egui"]
