[package]
name = "vigilant-doodle-launcher"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
publish = false

# 可执行程序
[[bin]]
name = "vigilant-doodle"
path = "src/main.rs"

[dependencies]
# 使用 workspace 依赖
bevy = { workspace = true, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "png",
    "x11",
    "wayland",
] }

# 游戏库（动态链接）
vigilant-doodle-game = { path = "../game" }

# 窗口图标支持
winit = { version = "0.30.12", default-features = false }
image = { version = "0.25.8", default-features = false, features = ["png"] }

[features]
# 开发模式：启用动态链接加速编译
dev = ["bevy/dynamic_linking", "vigilant-doodle-game/dev"]
