[package]
name = "vigilant-doodle-launcher"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
publish = false

# 可执行程序
[[bin]]
name = "vigilant-doodle"
path = "src/main.rs"

[dependencies]
# 使用 workspace 依赖（默认 features 已包含所有必要功能）
bevy = { workspace = true }

# 游戏库（动态链接）
vigilant-doodle-game = { path = "../game" }

# 窗口图标支持
winit = { version = "0.30.12", default-features = false }
image = { version = "0.25.8", default-features = false, features = ["png"] }

[features]
# 开发模式：启用动态链接加速编译
dev = ["bevy/dynamic_linking"]

# Inspector 调试工具
inspector = ["vigilant-doodle-game/inspector"]
